pkg/lang/testdata/ub/config/invalid/pin-non-ident-key.ub
factory: { pin: { 'library-path': 'github.com/me/lib' } }
